feat: enhance user management and layout features
- Updated user registration and profile retrieval to ensure sensitive data is not returned.
- Improved TypeScript strictness in user service and controller for better type safety.
- Added commitlint configuration for standardized commit messages.
- Introduced Docker Compose setup for MySQL and Redis services.
- Enhanced PM2 configuration for better process management and deployment.
- Created a production environment configuration for the frontend.
- Implemented Prettier for consistent code formatting across the frontend.
- Developed Dockerfile and Nginx configuration for the frontend application.
- Refactored layout components to utilize custom hooks for better state management.
- Added utility functions and types for improved code organization.
- Enhanced error handling in the request utility for better user feedback.
- Updated Vite configuration for optimized build and proxy settings.
- Created a PowerShell script for installing optimized dependencies.
- Established a root package.json for streamlined project management.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,49 @@
-# 数据库配置
+# ================================
+# 🚀 应用配置
+# ================================
+NODE_ENV=development
+PORT=3001
+
+# ================================
+# 🗄️ 数据库配置
+# ================================
 DB_HOST=localhost
 DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=your_mysql_password_here
 DB_DATABASE=nest_admin
 
-# JWT 配置
-JWT_SECRET=your-super-secret-jwt-key-change-in-production
+# ================================
+# 🔐 JWT 认证配置
+# ================================
+# 警告: 生产环境请使用强密钥! 可用命令生成: node -e "console.log(require('crypto').randomBytes(32).toString('hex'))"
+JWT_SECRET=your-super-secret-jwt-key-change-in-production-CHANGE-THIS
 JWT_EXPIRES_IN=7d
 
-# 服务器配置
-PORT=3000
-NODE_ENV=development
+# ================================
+# 🌐 CORS 配置
+# ================================
+CORS_ORIGIN=http://localhost:5173,http://localhost:5174
+
+# ================================
+# 📦 Redis 缓存配置 (可选)
+# ================================
+ENABLE_REDIS=false
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# ================================
+# 📊 监控与日志
+# ================================
+LOG_LEVEL=info
+LOG_DIR=./logs
+
+# ================================
+# ⚡ 性能优化
+# ================================
+# 最大请求体大小 (bytes)
+MAX_REQUEST_SIZE=10485760
+# API 限流 (每分钟请求数)
+RATE_LIMIT_TTL=60
+RATE_LIMIT_MAX=100
