--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,9 @@
     "start": "ts-node src/main.ts",
     "start:dev": "nodemon --exec ts-node src/main.ts",
     "start:debug": "nodemon --exec node --inspect=0.0.0.0:9229 -r ts-node/register src/main.ts",
-    "start:prod": "node dist/main.js"
+    "start:prod": "node dist/main.js",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "format": "prettier --write \"src/**/*.ts\""
   },
   "keywords": [],
   "author": "",
@@ -18,6 +20,7 @@
     "@as-integrations/express5": "^1.1.2",
     "@nestjs/apollo": "^13.2.1",
     "@nestjs/axios": "^4.0.1",
+    "@nestjs/cache-manager": "^3.0.1",
     "@nestjs/common": "^11.1.8",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.1.8",
@@ -30,9 +33,13 @@
     "@nestjs/typeorm": "^11.0.0",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
+    "cache-manager": "^7.2.5",
+    "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "compression": "^1.7.4",
     "graphql": "^16.12.0",
+    "helmet": "^8.0.0",
     "mysql2": "^3.15.3",
     "nest-winston": "^1.10.2",
     "passport": "^0.7.0",
@@ -47,9 +54,14 @@
   "devDependencies": {
     "@nestjs/cli": "^11.0.10",
     "@types/bcrypt": "^6.0.0",
+    "@types/compression": "^1.7.5",
     "@types/node": "^24.10.1",
     "@types/passport-jwt": "^4.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.0.0",
+    "@typescript-eslint/parser": "^8.0.0",
+    "eslint": "^9.0.0",
     "nodemon": "^3.1.11",
+    "prettier": "^3.4.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
