--- a/frontend/package.json
+++ b/frontend/package.json
@@ -37,9 +37,6 @@
     "prettier": "^3.4.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
-    "vite": "npm:rolldown-vite@7.2.2"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.2.2"
+    "vite": "^5.4.11"
   }
 }
