--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,6 +35,7 @@
     "globals": "^16.5.0",
     "less": "^4.4.2",
     "prettier": "^3.4.1",
+    "terser": "^5.44.1",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
     "vite": "^5.4.11"
