feat: 添加同时启动前后端的开发命令
添加了 concurrently 依赖和 npm run dev 命令来同时启动前后端服务，简化开发流程
删除不再使用的 ecosystem.config.js 文件
更新 README.md 文档以反映新的开发命令

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prepare": "husky install",
     "install:all": "cd backend && npm install && cd ../frontend && npm install",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
     "dev:backend": "cd backend && npm run start:dev",
     "dev:frontend": "cd frontend && npm run dev",
     "build:backend": "cd backend && npm run build",
@@ -20,6 +21,7 @@
   "devDependencies": {
     "@commitlint/cli": "^19.0.0",
     "@commitlint/config-conventional": "^19.0.0",
+    "concurrently": "^8.2.0",
     "husky": "^9.0.0",
     "lint-staged": "^15.0.0"
   },
