--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,12 @@
     "start:debug": "nodemon --exec node --inspect=0.0.0.0:9229 -r ts-node/register src/main.ts",
     "start:prod": "node dist/main.js",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "format": "prettier --write \"src/**/*.ts\""
+    "format": "prettier --write \"src/**/*.ts\"",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migration:create": "npm run typeorm -- migration:create",
+    "migration:generate": "npm run typeorm -- migration:generate -d ./typeorm.config.ts",
+    "migration:run": "npm run typeorm -- migration:run -d ./typeorm.config.ts",
+    "migration:revert": "npm run typeorm -- migration:revert -d ./typeorm.config.ts"
   },
   "keywords": [],
   "author": "",
