--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "@nestjs/swagger": "^11.2.1",
     "@nestjs/terminus": "^11.0.0",
     "@nestjs/typeorm": "^11.0.0",
+    "@types/cookie-parser": "^1.4.10",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
     "cache-manager": "^7.2.5",
@@ -43,6 +44,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.7",
     "graphql": "^16.12.0",
     "helmet": "^8.0.0",
     "mysql2": "^3.15.3",
