--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,24 +43,55 @@ jobs:
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
-            cd /home/nestadmin
-            
             # 拉取最新代码
-            git fetch origin
-            git checkout main
-            git pull origin main
+            cd /www/wwwroot
+            git clone -b main ${{ secrets.REPOSITORY_URL }} nestadmin || (cd nestadmin && git fetch origin && git checkout main && git pull origin main)
             
             # 更新后端
-            cd /home/nestadmin/backend
+            cd /www/wwwroot/nestadmin/backend
             npm install --production
             npm run build
-            pm2 restart nestAdmin || pm2 start dist/main.js --name nestAdmin
+            # 使用宝塔PM2管理器适配的命令
+            /www/server/panel/pyenv/bin/python3 /www/server/panel/tools/pm2_manager.py restart nestAdmin || /www/server/panel/pyenv/bin/python3 /www/server/panel/tools/pm2_manager.py add -n nestAdmin -p dist/main.js
             
-            # 更新前端（如果使用 Nginx）
-            cd /home/nestadmin/frontend
+            # 更新前端（适配宝塔Nginx）
+            cd /www/wwwroot/nestadmin/frontend
             npm install --production
             npm run build
-            cp -r dist/* /var/www/nestadmin/
+            # 复制到宝塔默认站点目录
+            cp -r dist/* /www/wwwroot/nestadmin/
+            
+            # 配置Nginx（创建或更新配置文件）
+            cat > /www/server/nginx/conf/vhost/nestadmin.conf << 'EOF'
+server {
+    listen 80;
+    server_name _;
+    root /www/wwwroot/nestadmin;
+    index index.html index.htm;
+    
+    # 静态文件缓存
+    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
+        expires 30d;
+    }
+    
+    # 后端API代理
+    location /api {
+        proxy_pass http://localhost:3001;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+    
+    # 前端路由支持（SPA）
+    location / {
+        try_files $uri $uri/ /index.html;
+    }
+}
+EOF
+            
+            # 重新加载Nginx配置
+            /www/server/nginx/sbin/nginx -s reload
             
             # 检查健康状态
             sleep 3
