--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -163,33 +163,7 @@ jobs:
           cp -r dist/* /www/wwwroot/nestadmin/
           
           # 配置Nginx（创建或更新配置文件）
-          cat > /www/server/nginx/conf/vhost/nestadmin.conf << 'EOF'
-server {
-    listen 80;
-    server_name _;
-    root /www/wwwroot/nestadmin;
-    index index.html index.htm;
-    
-    # 静态文件缓存
-    location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ {
-        expires 30d;
-    }
-    
-    # 后端API代理
-    location /api {
-        proxy_pass http://localhost:3001;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-    
-    # 前端路由支持（SPA）
-    location / {
-        try_files $uri $uri/ /index.html;
-    }
-}
-EOF
+          echo 'server { listen 80; server_name _; root /www/wwwroot/nestadmin; index index.html index.htm; location ~* \.(jpg|jpeg|png|gif|ico|css|js)$ { expires 30d; } location /api { proxy_pass http://localhost:3001; proxy_set_header Host $host; proxy_set_header X-Real-IP $remote_addr; proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for; proxy_set_header X-Forwarded-Proto $scheme; } location / { try_files $uri $uri/ /index.html; } }' > /www/server/nginx/conf/vhost/nestadmin.conf
           
           # 重新加载Nginx配置
           /www/server/nginx/sbin/nginx -s reload
