ci(deploy): 清理SERVER_HOST中的tcp://前缀
修复SERVER_HOST可能包含tcp://前缀导致部署失败的问题

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,8 @@ jobs:
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
         with:
-          host: ${{ secrets.SERVER_HOST }}
+          # 清理host地址，移除可能的tcp://前缀
+          host: ${{ replace(secrets.SERVER_HOST, 'tcp://', '') }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: 22  # 显式指定SSH端口
