--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -27,7 +27,7 @@ jobs:
 
     - name: Install dependencies
       working-directory: backend
-      run: npm ci
+      run: npm install --legacy-peer-deps
 
     - name: Run linter
       working-directory: backend
@@ -65,7 +65,7 @@ jobs:
 
     - name: Install dependencies
       working-directory: frontend
-      run: npm ci
+      run: npm install --legacy-peer-deps
 
     - name: Run linter
       working-directory: frontend
