ci(deploy): 简化服务器主机地址配置
直接使用SERVER_HOST变量而不进行替换处理，要求该变量在secrets中已正确配置为不带前缀的地址

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Deploy to Server
         uses: appleboy/ssh-action@master
         with:
-          # 清理host地址，移除可能的tcp://前缀
-          host: ${{ replace(secrets.SERVER_HOST, 'tcp://', '') }}
+          # 直接使用host地址，确保在secrets中正确设置不带前缀的地址
+          host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SERVER_SSH_KEY }}
           port: 22  # 显式指定SSH端口
